--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,24 +9,44 @@
   </head>
 
   <body>
-	<% flash.each do |name, msg| %>
-		<% content_tag(:div, msg, class: "alert alert-#{name}") %>
+
+    <div id ="main" class = "container" > 
+     <header class="navbar navbar-default roll=navigation">
+
+        <div id="logo"  class="navbar-brand">
+          <% link_to "hackernews", root_path %>
+
+        </div>
+
+        <nav class="collapse navbar-collapse navbar-ex-1-collapse">
+
+          <% if user_signed_in? %>
+            <ul class="nav navbar-nav navbar-left">
+              <li><%= link_to "submit", new_submission_path %></li>
+              <li><%= link_to "account", edit_user_registration_path %></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "logout", destroy_user_session_path, :method => :delete %></li>
+            </ul>
+          <% else %>
+            <ul>
+              <li><%= link_to "login", new_user_session_path %></li>
+            </ul>
+          <% end %>
+
+        </nav>
+
+     </header>
+    </div>
+
+	  <% flash.each do |name, msg| %>
+		  <% content_tag(:div, msg, class: "alert alert-#{name}") %>
     <% end %>
 
-    <% if user_signed_in? %>
-    	<ul>
-    		<li><%= link_to "Submit", new_submission_path %></li>
-    		<li><%= link_to "Account", edit_user_registration_path %></li>
-    		<li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
-    	</ul>
-    <% else %>
-   		<ul>
-    		<li><%= link_to "Sign Up", new_user_registration_path %></li>
-    		<li><%= link_to "Sign In", new_user_session_path %></li>
-    		
-    	</ul>
-	<% end %>
+      <div id="container" class="center-block"> 
+        <%= yield %>
+      </div>
 
-    <%= yield %>
+    
   </body>
 </html>
